Menyelesaikan Halaman Register, Login HomeAct

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppThemeLogin">
+        <activity android:name=".HomeActivity"></activity>
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,7 +19,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RegisterActivity" android:theme="@style/AppThemeRegist"></activity>
+        <activity
+            android:name=".RegisterActivity"
+            android:theme="@style/AppThemeRegist" />
     </application>
 
 </manifest>
